--- a/src/App.scss
+++ b/src/App.scss
@@ -13,12 +13,12 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: rgba($color: #101317, $alpha: 0.75);
-        width: calc(35% - 5rem);
+        background: $translucent-bg;
+        width: 35%;
         height: 3rem;
         .clip {
           position: absolute;
-          background: rgba($color: #101317, $alpha: 0.75);;
+          background: $translucent-bg;
           top: 0;
           right: -5rem;
           width: 5rem;
@@ -41,12 +41,12 @@
         position: absolute;
         top: 0;
         right: 0;
-        background: rgba($color: #101317, $alpha: 0.75);
+        background: $translucent-bg;
         width: calc(65% - 5rem);
         height: 3rem;
         .clip {
           position: absolute;
-          background: rgba($color: #101317, $alpha: 0.75);;
+          background: $translucent-bg;
           top: 0;
           left: -5rem;
           width: 5rem;
@@ -59,6 +59,7 @@
         z-index: 11;
         padding-top: 0.8rem;
         padding-bottom: 0.8rem;
+        padding-right: 1rem;
       }
     }
   }
@@ -70,7 +71,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-content: start;
+    align-content: flex-start;
     justify-content: center;
     .text-container {
       padding-left: 1rem;
@@ -91,6 +92,25 @@
     max-width: calc(1400px - 2rem);
     margin-left: auto;
     margin-right: auto;
-    padding: 0.2rem;
+    @media screen and (min-width: 3600px) {
+      max-width: calc(1800px - 2rem);
+    }
+    @media screen and (min-width: 4800px) {
+      //fuck you if you browse at this width btw
+      max-width: 100%;
+    }
+  }
+  .testi {
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    background: $translucent-bg;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    text-align: center;
+    margin-top: 3px;
+    h2 {
+      line-height: 1.5;
+    }
   }
 }
