--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -14,9 +14,17 @@ body {
 
 h1 {
   margin: 0;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 h2, h3, h4, h5 {
   font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+  color: $text;
+  &:visited {
+    color: $text;
+  }
 }
