hotfix: change justify-content to space-between for header elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,7 +61,7 @@
         padding-bottom: 0.8rem;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 60%;
         margin-left: auto;
         .nav-item {
