--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -1,6 +1,6 @@
 $font: 'Work Sans';
-$bg: #161D25;
-$translucent-bg: rgba($color: #101317, $alpha: 0.8);
+$bg: #0F1533;
+$translucent-bg: rgba($color: #6165e2, $alpha: 0.8);
 $text: #B2E1FF;
 $orange: #F27047;
 $red: #F2474C;
