idk anything anymore

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,7 @@
     }
   }
   .What-We-Do {
+    position: relative;
     background: #fffffe;
     color: $bg;
     padding-top: 5rem;
@@ -147,6 +148,7 @@
     }
   }
   .Coming-Soon {
+    position: relative;
     padding-top: 5rem;
     padding-bottom: 5rem;
     background: $text;
