--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -7,6 +7,9 @@ $text-2: #F1F5FF;
 $orange: #F27047;
 $red: #F2474C;
 $other: linear-gradient(65deg, transparentize($color: $red, $amount: 0), transparentize($color: $orange, $amount: 0));
+$sm: 800px;
+$md: 1200px;
+$lg: 1600px;
 
 body {
   font-family: $font;
@@ -63,7 +66,7 @@ a {
   width: 100%;
 }
 
-.test {
+.ogr {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
