--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 .App {
   .Roseblue {
-    color: $text;
+    color: $light-blue;
     width: 100%;
     &.Left {
       z-index: 10;
@@ -37,7 +37,7 @@
   .Mast-text {
     z-index: 0;
     position: relative;
-    color: $text;
+    color: $light-blue;
     height: calc(100vh - 3rem);
     width: 100%;
     display: flex;
@@ -49,8 +49,16 @@
       padding-right: 1rem;
     }
     h1 {
-      padding-top: 10rem;
+      margin-top: 10rem;
       font-size: 2.5rem;
+      @media screen and(max-width: $sm) {
+        font-size: 2rem;
+      }
+      @media screen and(max-width: $xsm) {
+        font-size: 1.6rem;
+        line-height: 1.2;
+        background: black;
+      }
     }
   }
   .Hero-container {
@@ -66,21 +74,45 @@
     position: relative;
     z-index: 1;
     width: 100%;
-    //background: $other;
     padding-top: 5rem;
     padding-bottom: 3rem;
     text-align: left;
+    color: $white;
+    border-bottom-right-radius: 50% 30%;
     h2 {
       line-height: 1.5;
+    }
+    .do-img {
+      margin-right: 64px;
+    }
+
+    @media screen and (max-width: $sm) {
+      text-align: center;
+      padding-top: 3rem;
+      .do-img {
+        display: none;
+      }
     }
   }
   .What-We-Do {
     position: relative;
     z-index: 1;
-    background: $text-2;
-    color: $bg;
+    background: $white;
+    color: $dark-blue;
     padding-top: 3rem;
     padding-bottom: 3rem;
+    border-top-left-radius: 50% 20%;
+    .bg-filler {
+      position: absolute;
+      top: 2rem;
+      right: 5%;
+      z-index: 0;
+      user-select: none;
+      font-size: 8vw;
+      opacity: 0.15;
+      font-weight: bold;
+      color: $orange;
+    }
     .title {
       text-align: right;
       font-weight: 700;
@@ -89,15 +121,15 @@
     }
     .column {
       width: 33%;
-      @media screen and (max-width: 800px) {
+      @media screen and (max-width: $sm) {
         margin-bottom: 1rem;
         width: 100%;
       }
 
       .item {
         padding: 1rem;
-        color: $text;
-        background: $bg;
+        color: $light-blue;
+        background: $dark-blue;
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         min-height: 294px;
@@ -113,8 +145,8 @@
     position: relative;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    background: $text;
-    color: $bg;
+    background: $light-blue;
+    color: $dark-blue;
     .title {
       text-align: right;
       font-weight: 700;
