--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -1,20 +1,20 @@
 $font: 'Work Sans';
-$bg: #0F1533;
-$translucent-bg: rgba($color: #B2E1FF, $alpha: 0.9);
-$text: #B2E1FF;
-$other-2: rgba($color: #BCCEEF, $alpha: 0.95);
-$text-2: #F1F5FF;
+$dark-blue: #0F1533;
+$light-blue: #B2E1FF;
+$light-blue-other: #BCCEEF;
+$white: #F1F5FF;
 $orange: #F27047;
 $red: #F2474C;
 $other: linear-gradient(65deg, transparentize($color: $red, $amount: 0), transparentize($color: $orange, $amount: 0));
+$xsm: 400px;
 $sm: 800px;
 $md: 1200px;
 $lg: 1600px;
 
 body {
   font-family: $font;
-  background: $bg;
-  color: $text;
+  background: $dark-blue;
+  color: $light-blue;
   font-weight: 400;
   @media screen and (min-width: 6000px) {
     //you dont deserve to browse the internet in peace if you do it at this width.
@@ -33,10 +33,16 @@ h2, h3, h4, h5 {
 
 a {
   text-decoration: none;
-  color: $text;
+  color: $light-blue;
   &:visited {
-    color: $text;
+    color: $light-blue; 
   }
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .container {
@@ -57,6 +63,10 @@ a {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  &.relative {
+    position: relative;
+  }
 }
 
 .row {
@@ -64,6 +74,35 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+
+  &.align-items-center {
+    align-items: center;
+  }
+  &.justify-content-center {
+    justify-content: center;
+  }
+  &.row-reverse {
+    flex-direction: row-reverse;
+  }
+}
+
+.bg-filler {
+  position: absolute;
+  z-index: 0;
+  width: 50%;
+  min-height: 50vh;
+
+  &.left {
+    left: 0;
+  }
+
+  &.right {
+    right: 0;
+  }
+}
+
+.white {
+  background: $white;
 }
 
 .ogr {
