--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,6 +4,13 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  color: $white;
+  a {
+    color: $white;
+    &:visited {
+      color: $white;
+    }
+  }
   .anchor {
     position: absolute;
     top: 0;
@@ -36,6 +43,7 @@
       line-height: 3rem;
       width: calc(35% + 5rem);
       margin-right: auto;
+      height: 3rem;
       .title {
         padding-left: 1rem;
         font-size: 2rem;
@@ -48,6 +56,14 @@
       justify-content: space-between;
       width: 100%;
     }
+    .ham {
+      display: none;
+      margin-left: auto;
+      width: 2.3rem;
+      height: 2.3rem;
+      background: $white;
+      border-radius: 8px;
+    }
     .nav-item {
       padding: 0 1rem;
     }
@@ -55,8 +71,28 @@
 
   @media screen and (max-width: $sm) {
     position: fixed;
+    width: 100%;
     .anchor {
       width: 100%;
+      box-shadow: 0 0 3rem -1rem rgba(24, 24, 24, 0.2);
+    }
+    .nav {
+      width: 100%;
+      align-items: center;
+      .nav-items {
+        display: none;
+      }
+      .rb {
+        line-height: 48px;
+        display: block;
+        .title {
+          padding-left: 0;
+          font-size: 1.5rem;
+        }
+      }
+      .ham {
+        display: block;
+      }
     }
   }
 }
