--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -2,10 +2,10 @@
 
 .Hero {
   .Hero-SVG {
-    background-color: $bg;
+    background-color: $dark-blue;
     min-height: 100vh;
     font-size: calc(10px + 2vmin);
-    color: $text;
+    color: $light-blue;
     margin-top: -3%;
   }
 }
@@ -14,7 +14,7 @@ svg#island {
   .a, .aa, .ab, .ac, .ad, .ae, .af, .ag, .ah, .ai, .aj, .ak, .al, .b, .c, .d, .e, .f, .g, .h, .i, .j, .k, .l, .m, .n, .o, .p, .q, .r, .s, .t, .u, .v, .w, .x, .y, .z {
     fill: none;
     stroke-miterlimit: 10;
-    stroke-width: 2px;
+    stroke-width: 3px;
     fill-rule: evenodd;
   }
 
